--- a/Youtube.html
+++ b/Youtube.html
@@ -1,5 +1,247 @@
 <!-- Copying the code is easy, but when you create it, you have to become busy -->
-
-For Source Code Open Link & Press Ctrl+U
-
-To view the source code of a webpage on Android, add view-source: before url
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	
+    <!-- favicon  -->
+    <link rel="icon" href="https://youtube.com/favicon.ico" type="image/x-icon">
+	
+  <style>
+    html, body {
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+    }
+ 
+    body {
+        font-family: Arial, sans-serif;
+        background-image: url('https://wallpaperaccess.com/full/1567770.gif');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: #f2f2f2;
+        font-size: 16px;
+        color: #ffffff;
+    }
+        .container {
+            text-align: center; 
+            margin-top: 50px; 
+        }
+        .target-cursor {
+            width: 20px;
+            height: 20px;
+            background-color: transparent;
+            border: 2px solid #333;
+            border-radius: 50%;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            pointer-events: none;
+            animation: moveCursor 0.3s infinite alternate;
+        }
+ 
+        @keyframes moveCursor {
+            0% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 1;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(1.5);
+                opacity: 0.5;
+            }
+        }
+ .search-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ 
+.username-input {
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid #0074D9;
+    border-radius: 4px 0 0 4px;
+    width: 300px;
+    margin-right: -2px; 
+}
+ 
+.search-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #0074D9;
+    color: #fff;
+    border: 2px solid #443c1e;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-family: Arial, sans-serif;
+}
+ 
+.search-button:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+    color: #fff;
+}
+.center {
+  text-align: center;
+}
+ 
+.title {
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  color:#271313e6; 
+  background-color:#1f11112e; 
+  display: inline-block; 
+  padding: -1px 3px;
+  text-transform: uppercase;
+}
+.outer-black-box {
+}
+  </style
+</head>
+<body>
+    <title>YouTube Live Views, Likes,& Comments Count</title>
+    <div class="target-cursor"></div>
+    <p align="center">
+        <b><img src="https://readme-typing-svg.herokuapp.com?font=Montserrat&size=20&duration=5001&color=8B0000&vCenter=true&center=true&width=460&lines=WLC+TO+YT+LIVE;+VIEWS+LIKES+CMTS+DISPLAY"></b>
+    </p>
+    <br>
+    <div class="container">
+        <button style="background-color:#ce9d6c14; padding: 0px 8px; margin-right: 10px;">
+            <a href="https://yashawanthtechprojects.on.drv.tw/web.html" style="color: black; text-decoration: none; font-size: 18px; font-weight: bold;">Web Development Projects</a>
+        </button>
+    </div>
+    <div class="container">
+    <div class="outer-black-box">
+        <button style="background-color:#00000014; padding: 10px 8px; margin-right: 27px;">
+            <a href="#" style="display: flex; align-items: center; text-decoration: none; color: black; font-size: 14px; font-weight: bold;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Youtube_2018.gif/640px-Youtube_2018.gif" alt="YouTube Logo" style="height: 20px; margin-right: 5px;">
+                LIVE VIDEO INFO
+            </a>
+			</button>
+	<br>
+	<br>
+ <div class="search-container">
+    <input type="text" class="username-input" id="searchInput" placeholder="Enter YouTube Video URL">
+    <button class="search-button" onclick="searchStats()">Search</button>
+</div>
+<br>
+<div class="badge-container" id="badgeContainer"></div>
+<div id="result"></div>
+</div>
+<div class="container" style="margin-top: 20px;">
+    <button style="background-color: #00000094; padding: -10px 20px; margin-right: 1px;">
+        <a style="color: white; text-decoration: none; font-size: 18px; font-weight: bold;">© ® Developed By Yashawanth R</a>
+    </button>
+</div>
+<br>
+<div class="center">
+  <h5 class="title">Visitors Count</h5>
+</div>
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=12887818&style=0006&nbdigits=1&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                  
+<script>
+    // Custom cursor
+    const targetCursor = document.querySelector('.target-cursor');
+    document.addEventListener('mousemove', (e) => {
+        targetCursor.style.left = e.clientX + 'px';
+        targetCursor.style.top = e.clientY + 'px';
+    });
+ 
+    document.getElementById('searchInput').addEventListener('keypress', function (e) {
+        if (e.key === 'Enter') {
+            searchStats();
+        }
+    });
+function extractVideoId(url) {
+    const videoRegex = /[?&]v=([^&]+)/;
+    const shortsRegex = /\/shorts\/([^/?]+)/;
+    const videoMatch = url.match(videoRegex);
+    const shortsMatch = url.match(shortsRegex);
+ 
+    if (videoMatch && videoMatch[1]) {
+        return videoMatch[1];
+    } else if (shortsMatch && shortsMatch[1]) {
+        return shortsMatch[1];
+    } else if (url.includes('youtu.be/')) {
+        const parts = url.split('/');
+        return parts[parts.length - 1].split('?')[0];
+    } else {
+        return null;
+    }
+}
+ 
+function searchStats() {
+    const searchInput = document.getElementById('searchInput').value;
+    const badgeContainer = document.getElementById('badgeContainer');
+ 
+    if (searchInput.trim() !== '') {
+        let videoId = '';
+ 
+        videoId = extractVideoId(searchInput);
+ 
+        if (!videoId) {
+            badgeContainer.innerHTML = '<span style="color:red; font-weight: bold;">Enter a valid YouTube video URL</span>';
+            return;
+        }
+ 
+        const likesBadgeUrl = `https://img.shields.io/youtube/likes/${videoId}`;
+        const commentsBadgeUrl = `https://img.shields.io/youtube/comments/${videoId}`;
+        const viewsBadgeUrl = `https://img.shields.io/youtube/views/${videoId}`;
+ 
+        fetch(likesBadgeUrl)
+            .then(response => response.ok ? response : Promise.reject(response))
+            .then(response => response.blob())
+            .then(blob => {
+                const likesBadge = URL.createObjectURL(blob);
+                return fetch(commentsBadgeUrl).then(response => response.blob().then(blob => ({ likesBadge, commentsBadge: URL.createObjectURL(blob) })));
+            })
+            .then(({ likesBadge, commentsBadge }) => {
+                const likesImg = document.createElement('img');
+                likesImg.src = likesBadge;
+                likesImg.alt = 'Likes Badge';
+                likesImg.classList.add('badge');
+                likesImg.style.width = '150px';
+                likesImg.style.height = 'auto';
+ 
+                const commentsImg = document.createElement('img');
+                commentsImg.src = commentsBadge;
+                commentsImg.alt = 'Comments Badge';
+                commentsImg.classList.add('badge');
+                commentsImg.style.width = '150px';
+                commentsImg.style.height = 'auto';
+ 
+                const viewsImg = document.createElement('img');
+                viewsImg.src = viewsBadgeUrl;
+                viewsImg.alt = 'Views Badge';
+                viewsImg.classList.add('badge');
+                viewsImg.style.width = '150px';
+                viewsImg.style.height = 'auto';
+ 
+                badgeContainer.innerHTML = '';
+ 
+                const viewsDiv = document.createElement('div');
+                viewsDiv.appendChild(viewsImg);
+                badgeContainer.appendChild(viewsDiv);
+ 
+                const likesDiv = document.createElement('div');
+                likesDiv.appendChild(likesImg);
+                badgeContainer.appendChild(likesDiv);
+ 
+                const commentsDiv = document.createElement('div');
+                commentsDiv.appendChild(commentsImg);
+                badgeContainer.appendChild(commentsDiv);
+            })
+            .catch(error => {
+                console.error('Error fetching video statistics:', error);
+            });
+    }
+}
+</script>
+</body>
+</html>
